# tightwad

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  index.html  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
benchmarks/: GPT-OSS-120B-TEST-REPORT.md  benchmark_llama_openrouter.json  benchmark_meta-llama_llama-3.1-70b-instruct.json  benchmark_qwen_qwen3-235b-a22b.json  benchmark_qwen_qwen3.5-397b-a17b.json  benchmark_results.json  gptoss-120b-benchmark.json  gptoss-120b-full-benchmark.json  minimax-m2.5-benchmark.json
configs/: cluster-akiva-gptoss.yaml  cluster-moe-youngharold.yaml  cluster-rocm-gptoss.yaml  cluster-test-spec.yaml  cluster-unraid-coord.yaml  cluster.yaml
docs/: architecture.md  configuration.md  moe.md  quickstart.md  security.md  swarm-protocol.md
examples/: README.md  combined-mode.yaml  cpu-draft-gpu-target.yaml  minimal-spec-decode.yaml  mixed-vendor-pool.yaml  two-gpu-single-machine.yaml
scripts/: benchmark.sh  benchmark_families.py  benchmark_openrouter.py  benchmark_proxy.py  install-coordinator.sh  install-worker.sh
tests/: e2e_loader_test.py  test_auto_tune.py  test_bench.py  test_chat_templates.py  test_cli_moe.py  test_config.py  test_consensus.py  test_coordinator.py  test_dashboard.py  test_deploy.py  test_distribute.py  test_doctor.py  test_family.py  test_gguf_reader.py  test_gpu_detect.py  test_init_wizard.py  test_inspect.py  test_loader.py  test_manifest.py  test_model_hub.py  test_moe.py  test_moe_defuse.py  (+18 more)
(+46 files in other folders)
